fix(mentor): 오류 사항 수정